k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-service
spec:
  type: NodePort
  selector:
    app: k8s-demo-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
